# opensource-ai-engineering-contributions

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CLEAN_ROOM_STATEMENT.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
examples/support_agent/: README.md  demo.py
src/covenant/: __init__.py  __main__.py  cli.py  engine.py  manifest.py  report.py  trajectory.py
src/covenant/adapters/: __init__.py  langgraph.py  manual.py
src/covenant/demos/: __init__.py  support_agent.py
src/covenant/policies/: __init__.py  base.py  budget.py  forbidden_action.py  least_privilege.py  pii.py  prompt_injection.py
tests/: test_covenant.py
