[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "covenant-agents"
version = "0.1.0"
description = "A pre-production trust harness for AI agents: assert safety, policy, and identity/permission invariants across an agent's trajectory and gate CI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Raju R" }]
keywords = [
  "ai", "agents", "llm", "evaluation", "guardrails",
  "ai-security", "governance", "langgraph", "reliability", "llmops",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/gh-raju/opensource-ai-engineering-contributions"
Repository = "https://github.com/gh-raju/opensource-ai-engineering-contributions"
Issues = "https://github.com/gh-raju/opensource-ai-engineering-contributions/issues"

[project.scripts]
covenant = "covenant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
